# yolov11

./: .gitignore
cpp/: CMakeLists.txt
cpp/src/: Common.hpp  detect.cpp  detect.hpp  inference.cpp  inference.hpp  main.cpp  preprocess.cpp  preprocess.hpp
python/: detect.py  inference.py  tensorRT推理.py  train.py  删除空label.py  合成视频.py  数据集分割.py  生成label.py  视频切片.py
